--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,42 @@
 @charset "UTF-8";
 /*  Обозначаю цвет фона всего сайта  */
+html {
+  font-size: 14px; }
+
 body {
-  background-color: #eef3f5; }
+  padding-top: 40px;
+  background-color: #eef3f5;
+  color: #131313;
+  font-family: 'Roboto', sans-serif; }
+
+.top-nav {
+  background-color: #ffffff;
+  padding: 15px; }
+  .top-nav_menu {
+    list-style: none;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .top-nav li {
+    margin-right: 45px; }
+    .top-nav li a {
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #131313;
+      font-weight: 700; }
+      .top-nav li a::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #009adf;
+        -webkit-transform: translateY(37px) scale(0);
+                transform: translateY(37px) scale(0);
+        -webkit-transition: all 0.2s;
+        transition: all 0.2s; }
+      .top-nav li a:hover {
+        text-decoration: none; }
+        .top-nav li a:hover::after {
+          -webkit-transform: translateY(37px) scale(1);
+                  transform: translateY(37px) scale(1); }
