--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ body {
   color: #131313;
   font-family: 'Roboto', sans-serif; }
 
+a {
+  color: #009adf; }
+
 .top-nav {
   background-color: #ffffff;
   padding: 15px; }
@@ -18,25 +21,58 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
-  .top-nav li {
-    margin-right: 45px; }
-    .top-nav li a {
-      text-transform: uppercase;
-      text-decoration: none;
-      color: #131313;
-      font-weight: 700; }
-      .top-nav li a::after {
-        content: '';
+    .top-nav_menu li {
+      margin-right: 45px; }
+      .top-nav_menu li a {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #131313;
+        font-weight: 700; }
+        .top-nav_menu li a::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 2px;
+          background-color: #009adf;
+          -webkit-transform: translateY(37px) scale(0);
+                  transform: translateY(37px) scale(0);
+          -webkit-transition: all 0.2s;
+          transition: all 0.2s; }
+        .top-nav_menu li a:hover {
+          text-decoration: none; }
+          .top-nav_menu li a:hover::after {
+            -webkit-transform: translateY(37px) scale(1);
+                    transform: translateY(37px) scale(1); }
+
+.left-sidebar {
+  margin-top: 40px; }
+  .left-sidebar_menu {
+    background-color: #ffffff;
+    list-style: none;
+    padding: 0; }
+    .left-sidebar_menu li {
+      -webkit-transition: all 0.1s;
+      transition: all 0.1s; }
+      .left-sidebar_menu li:first-child a {
+        padding-top: 20px; }
+      .left-sidebar_menu li:last-child a {
+        padding-top: 20px; }
+      .left-sidebar_menu li:hover {
+        background-color: #009adf; }
+        .left-sidebar_menu li:hover a {
+          color: #ffffff; }
+      .left-sidebar_menu li a {
         display: block;
-        width: 100%;
-        height: 2px;
-        background-color: #009adf;
-        -webkit-transform: translateY(37px) scale(0);
-                transform: translateY(37px) scale(0);
-        -webkit-transition: all 0.2s;
-        transition: all 0.2s; }
-      .top-nav li a:hover {
-        text-decoration: none; }
-        .top-nav li a:hover::after {
-          -webkit-transform: translateY(37px) scale(1);
-                  transform: translateY(37px) scale(1); }
+        padding: 15px 29px;
+        text-decoration: none;
+        color: #131313;
+        font-size: 16px;
+        font-weight: 400; }
+  .left-sidebar_object {
+    margin-top: 30px;
+    background-color: #ffffff; }
+    .left-sidebar_object-description {
+      padding: 30px; }
+      .left-sidebar_object-description h3 {
+        text-transform: uppercase;
+        font-weight: 400; }
