--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,37 +11,104 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+a {
+  color: $active-color;
+}
+
 .top-nav {
   background-color: $white;
   padding: 15px;
+  
   &_menu {
     list-style: none;
     padding: 0;
     display: flex;
+  
+  
+    li {
+      margin-right: 45px;
+
+      a {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: $dark;
+        font-weight: 700;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 2px;
+          background-color: $active-color;
+          transform: translateY(37px) scale(0);
+          transition: all 0.2s;
+        }
+
+        &:hover {
+          text-decoration: none;
+          &::after {
+            transform: translateY(37px) scale(1);
+          }
+        }
+      }
+    }
   }
-  li {
-    margin-right: 45px;
-    a {
-      text-transform: uppercase;
-      text-decoration: none;
-      color: $dark;
-      font-weight: 700;
-      
-      &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 2px;
-        background-color: $active-color;
-        transform: translateY(37px) scale(0);
-        transition: all 0.2s;
+}
+
+.left-sidebar {
+  margin-top: 40px;
+  
+  &_menu {
+    background-color: $white;
+    list-style: none;
+    padding: 0;
+    
+    li {
+      transition: all 0.1s;
+
+      &:first-child {
+        
+        a {
+          padding-top: 20px;
+        }
+      }
+
+      &:last-child {
+        
+        a {
+          padding-top: 20px;
+        }
       }
       
       &:hover {
-        text-decoration: none;
-        &::after {
-          transform: translateY(37px) scale(1);
+        background-color: $active-color;
+        
+        a {
+          color: $white;
         }
+      }
+      
+      a {
+        display: block;
+        padding: 15px 29px;
+        text-decoration: none;
+        color: $dark;
+        font-size: 16px;
+        font-weight: 400;
+      }
+    }    
+  }
+  
+  &_object {
+    margin-top: 30px;
+    background-color: $white;
+    
+    &-description {
+      padding: 30px;
+      
+      h3 {
+        text-transform: uppercase;
+        font-weight: 400;
       }
     }
   }
