--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "color.scss";
+@import "reset.scss";
 
 html {
   font-size: 14px;
@@ -148,10 +149,14 @@ a {
     background-color: $white;
     height: 220px;
     text-align: center;
+    margin: 0 15px;
+    padding: 10px;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
     
     h3 {
       color: $active-color;
-      padding: 20px 34px;
     }
   }
 }
