--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html {
   font-size: 14px; }
 
 body {
+  margin: 0;
   padding-top: 40px;
   background-color: #eef3f5;
   color: #131313;
@@ -112,3 +113,49 @@ a {
     background-size: contain; }
     .directions-block h3 {
       color: #009adf; }
+
+.footer {
+  margin-top: 60px;
+  padding: 59px 0;
+  background-color: #131313;
+  color: #666666; }
+  .footer-policy-link {
+    font-size: 12px; }
+  .footer p {
+    margin-bottom: 14px; }
+  .footer a {
+    color: #666666;
+    text-decoration: none; }
+    .footer a:hover {
+      color: #ffffff; }
+  .footer small {
+    display: block;
+    max-width: 80%;
+    margin-top: 56px;
+    line-height: 16px;
+    font-size: 10px; }
+  .footer ul {
+    padding: 0;
+    list-style: none; }
+    .footer ul li {
+      line-height: 32px; }
+  .footer-contacts {
+    text-align: right; }
+    .footer-contacts_phone {
+      font-weight: 400;
+      font-size: 20px;
+      color: #009adf; }
+  .footer-social-links {
+    text-align: right; }
+    .footer-social-links li {
+      display: inline-block; }
+      .footer-social-links li a {
+        display: inline-block;
+        width: 42px;
+        height: 42px;
+        background-color: rgba(255, 255, 255, 0.1);
+        text-align: center;
+        border-radius: 50%;
+        padding: 7px; }
+        .footer-social-links li a:hover {
+          background-color: rgba(255, 255, 255, 0.9); }
