--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+  margin: 0;
   padding-top: 40px;
   background-color: $body-bg;
   color: $dark;
@@ -157,6 +158,78 @@ a {
     
     h3 {
       color: $active-color;
+    }
+  }
+}
+
+.footer {
+  margin-top: 60px;
+  padding: 59px 0;
+  background-color: $dark;
+  color: $footer-text;
+  
+  &-policy-link {
+    font-size: 12px;
+  }
+  
+  p {
+    margin-bottom: 14px;
+  }
+  
+  a {
+    color: $footer-text;
+    text-decoration: none;
+    
+    &:hover {
+      color: $white;
+    }
+  }
+  
+  small {
+    display: block;
+    max-width: 80%;
+    margin-top: 56px;
+    line-height: 16px;
+    font-size: 10px;
+  }
+  
+  ul {
+    padding: 0;
+    list-style: none;
+    
+    li {
+      line-height: 32px;
+    }
+  }
+  
+  &-contacts {
+    text-align: right;
+    
+    &_phone {
+      font-weight: 400;
+      font-size: 20px;
+      color: $active-color;
+    }
+  }
+  
+  &-social-links {
+    text-align: right;
+    
+    li {
+      display: inline-block;
+      a {
+        display: inline-block;
+        width: 42px;
+        height: 42px;
+        background-color: rgba($white, 0.1);
+        text-align: center;
+        border-radius: 50%;
+        padding: 7px;
+        
+        &:hover {
+          background-color: rgba($white, 0.9);
+        }
+      }
     }
   }
 }
