--- a/css/main.css
+++ b/css/main.css
@@ -158,4 +158,7 @@ a {
         border-radius: 50%;
         padding: 7px; }
         .footer-social-links li a:hover {
-          background-color: rgba(255, 255, 255, 0.9); }
+          background-color: rgba(255, 255, 255, 0.3); }
+        .footer-social-links li a img {
+          width: 100%;
+          height: auto; }
