Сделал адаптивы главной страницы

--- a/css/main.css
+++ b/css/main.css
@@ -64,14 +64,15 @@
 
 /* '' */
 html {
-  font-size: 14px; }
+  font-size: 10px; }
 
 body {
   margin: 0;
   padding-top: 40px;
   background-color: #eef3f5;
   color: #131313;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px; }
 
 h2 {
   font-size: 24px; }
@@ -138,11 +139,14 @@ a {
                     transform: translateY(37px) scale(1); }
 
 .left-sidebar {
-  margin-top: 40px; }
+  margin-top: 4rem; }
   .left-sidebar_btn {
+    display: none;
     position: relative;
     background-color: #ffffff;
     padding: 15px; }
+    .left-sidebar_btn:hover {
+      cursor: pointer; }
     .left-sidebar_btn::after {
       content: '';
       position: absolute;
@@ -257,7 +261,9 @@ a {
           height: auto; }
 
 /*  Адаптив для сайта  */
-@media (max-width: 480px) {
+@media (max-width: 767px) {
+  html {
+    font-size: 5px; }
   .top-nav_btn {
     display: block; }
   .top-nav_menu {
@@ -274,4 +280,53 @@ a {
     .top-nav_menu li {
       line-height: 2; }
       .top-nav_menu li a::after {
-        display: none; } }
+        display: none; }
+  .left-sidebar_btn {
+    display: block; }
+  .left-sidebar_menu {
+    display: none; }
+    .left-sidebar_menu__active {
+      display: block; }
+  .left-sidebar_object {
+    display: none; }
+  .copy {
+    text-align: center; }
+    .copy small {
+      display: block;
+      margin: 36px auto; }
+  .footer-contacts {
+    text-align: left; }
+  .footer-social-links {
+    text-align: left; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  html {
+    font-size: 5px; }
+  .top-nav_btn {
+    display: block; }
+  .top-nav_menu {
+    display: none; }
+    .top-nav_menu__active {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin-bottom: 0;
+      -ms-flex-pack: distribute;
+          justify-content: space-around; }
+    .top-nav_menu li {
+      margin-right: 0;
+      line-height: 2; }
+      .top-nav_menu li a::after {
+        display: none; }
+  .left-sidebar_btn {
+    display: block; }
+  .left-sidebar_menu {
+    display: none; }
+    .left-sidebar_menu__active {
+      display: block; }
+  .left-sidebar_object {
+    display: none; }
+  .footer-contacts {
+    text-align: left; }
+  .footer-social-links {
+    text-align: left; } }
