--- a/sass/media.scss
+++ b/sass/media.scss
@@ -130,3 +130,15 @@
     }
   }
 }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  
+  .top-nav_menu {
+    display: flex;
+    justify-content: space-between;
+    
+    li {
+      margin: 0;
+    }
+  }
+}
