--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,7 +45,7 @@ a {
 .top-nav {
   position: relative;
   background-color: $white;
-  padding: 15px;
+  padding: 15px 34px;
   
   &_btn {
     display: none;
@@ -70,6 +70,10 @@ a {
 
     li {
       margin-right: 45px;
+      
+      &:last-child {
+        margin-right: 0;
+      }
 
       a {
         text-transform: uppercase;
@@ -299,6 +303,44 @@ a {
   
   p {
     margin-bottom: 40px;
+  }
+}
+
+.contacts {
+  font-size: 16px;
+  
+  &-address {
+    display: block;
+    line-height: 2;
+    margin-bottom: 20px;
+  }
+  
+  &-btn {
+    margin-top: 36px;
+  }
+  
+  &-social-links {
+    
+    ul {
+      list-style: none;
+      margin-top: 36px;
+      padding: 0;
+      
+      li {
+        display: inline-block;
+        
+        a {
+          display: inline-block;
+          background-color: $active-color;
+          color: $white;
+          margin-right: 15px;
+          width: 32px;
+          height: 32px;
+          text-align: center;
+          border-radius: 50%;
+        }
+      }
+    }
   }
 }
 
