--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,37 @@ a {
     border: 6px solid transparent;
     border-right: 6px solid #009adf; }
 
+.calc-summ_invest_label {
+  margin-right: 10px; }
+
+.calc-summ_invest_num {
+  display: inline-block;
+  padding: 10px 48px;
+  background-color: #ffffff;
+  font-size: 18px; }
+
+.calc-total {
+  margin-top: 20px;
+  display: inline-block;
+  text-align: center;
+  background-color: #ffffff;
+  padding: 10px 28px;
+  margin-right: 40px; }
+  .calc-total strong {
+    font-size: 18px;
+    color: #009adf;
+    font-weight: 400; }
+  .calc-total small {
+    font-size: 10px; }
+
+.calc-monthly {
+  display: inline-block;
+  text-align: center;
+  font-size: 18px; }
+  .calc-monthly small {
+    font-size: 10px;
+    text-align: center; }
+
 /*  Адаптив для сайта  */
 @media (max-width: 767px) {
   html {
