--- a/sass/main.scss
+++ b/sass/main.scss
@@ -461,6 +461,52 @@ a {
       border-right: 6px solid $active-color;
     }
   }
+  
+  &-summ {
+    &_invest {
+      
+      &_label {
+        margin-right: 10px;
+      }
+      
+      &_num {
+        display: inline-block;
+        padding: 10px 48px;
+        background-color: $white;
+        font-size: 18px;
+      }
+    }
+  }
+  
+  &-total {
+    margin-top: 20px;
+    display: inline-block;
+    text-align: center;
+    background-color: $white;
+    padding: 10px 28px;
+    margin-right: 40px;
+    
+    strong {
+      font-size: 18px;
+      color: $active-color;
+      font-weight: 400;
+    }
+    
+    small {
+      font-size: 10px;
+    }
+  }
+  
+  &-monthly {
+    display: inline-block;
+    text-align: center;
+    font-size: 18px;
+    
+    small {
+      font-size: 10px;
+      text-align: center;
+    }
+  }
 }
 
 @import "media.scss";
