Сделал калькулятор с помощью jQuery

--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,10 @@ a {
   .organization-card p {
     line-height: 22px; }
 
+.calc h4 {
+  margin-top: 0;
+  margin-bottom: 30px; }
+
 .calc-programms {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -396,21 +400,22 @@ a {
     border: 6px solid transparent;
     border-right: 6px solid #009adf; }
 
-.calc-summ_invest_label {
-  margin-right: 10px; }
-
-.calc-summ_invest_num {
-  display: inline-block;
-  padding: 10px 48px;
-  background-color: #ffffff;
-  font-size: 18px; }
+.calc-summ_invest {
+  margin-top: 30px; }
+  .calc-summ_invest_label {
+    margin-right: 10px; }
+  .calc-summ_invest_num {
+    display: inline-block;
+    padding: 10px 48px;
+    background-color: #ffffff;
+    font-size: 18px; }
 
 .calc-total {
   margin-top: 20px;
   display: inline-block;
   text-align: center;
   background-color: #ffffff;
-  padding: 10px 28px;
+  padding: 10px;
   margin-right: 40px; }
   .calc-total strong {
     font-size: 18px;
@@ -420,8 +425,11 @@ a {
     font-size: 10px; }
 
 .calc-monthly {
+  margin-top: 20px;
   display: inline-block;
   text-align: center;
+  padding: 10px;
+  margin-right: 40px;
   font-size: 18px; }
   .calc-monthly small {
     font-size: 10px;
