Добавил модальное окно

--- a/css/main.css
+++ b/css/main.css
@@ -79,18 +79,21 @@ h2 {
 
 a {
   color: #009adf; }
-  a.btn {
-    padding: 20px 30px;
-    border-radius: 5px;
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 700; }
-    a.btn-primary {
-      background-color: #009adf;
-      border-bottom: 5px solid #0077ac; }
-      a.btn-primary:hover {
-        background-color: #00a1e9; }
+
+.btn {
+  display: inline-block;
+  padding: 20px 30px;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700; }
+  .btn-primary {
+    background-color: #009adf;
+    border-bottom: 5px solid #0077ac; }
+    .btn-primary:hover {
+      background-color: #00a1e9; }
 
 .top-nav {
   position: relative;
@@ -461,6 +464,63 @@ a {
     color: #131313;
     margin-top: 30px;
     text-align: center; }
+
+.object-page a {
+  display: inline-block; }
+
+.object-page_gallery {
+  float: right; }
+
+.modal {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; }
+  .modal-content {
+    position: relative;
+    padding: 30px 50px;
+    background-color: #ffffff;
+    width: 100%;
+    max-width: 370px;
+    margin: 50px auto;
+    text-align: center;
+    -webkit-box-shadow: 0 12px 24px rgba(0, 0, 1, 0.18);
+            box-shadow: 0 12px 24px rgba(0, 0, 1, 0.18); }
+    .modal-content .close {
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      font-size: 20px;
+      line-height: 1;
+      opacity: 0.5; }
+      .modal-content .close:hover {
+        cursor: pointer; }
+    .modal-content h4 {
+      margin-top: 0;
+      font-size: 18px;
+      color: #009adf;
+      margin-bottom: 14px; }
+    .modal-content p {
+      font-size: 12px;
+      margin-top: 0; }
+  .modal-form {
+    margin-top: 37px; }
+    .modal-form input {
+      display: inline-block;
+      width: 100%;
+      border: 1px solid rgba(19, 19, 19, 0.15);
+      font-size: 15px;
+      margin-bottom: 10px;
+      padding: 20px;
+      border-radius: 4px; }
+    .modal-form_btn {
+      display: block;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 20px; }
 
 /*  Адаптив для сайта  */
 @media (max-width: 767px) {
