--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,25 +21,28 @@ h2 {
 
 a {
   color: $active-color;
+}
   
-  &.btn {
-    padding: 20px 30px;
-    border-radius: 5px;
-    color: $white;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 700;
-    
-    &-primary {
-      background-color: $active-color;
-      border-bottom: 5px solid darken($active-color, 10%);
-      
-      &:hover {
-        background-color: lighten($active-color, 2%);
-      }
+.btn {
+  display: inline-block;
+  padding: 20px 30px;
+  border: none;
+  border-radius: 5px;
+  color: $white;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
+
+  &-primary {
+    background-color: $active-color;
+    border-bottom: 5px solid darken($active-color, 10%);
+
+    &:hover {
+      background-color: lighten($active-color, 2%);
     }
   }
 }
+
 
 .top-nav {
   position: relative;
@@ -556,6 +559,86 @@ a {
       color: $dark;
       margin-top: 30px;
       text-align: center;
+    }
+  }
+}
+
+.object {
+  &-page {
+    
+    a {
+      display: inline-block;
+    }
+    
+    &_gallery {
+      float: right;
+    }
+  }
+}
+
+.modal {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  
+  &-content {
+    position: relative;
+    padding: 30px 50px;
+    background-color: $white;
+    width: 100%;
+    max-width: 370px;
+    margin: 50px auto;
+    text-align: center;
+    box-shadow: 0 12px 24px rgba(0, 0, 1, 0.18);
+    
+    .close {
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      font-size: 20px;
+      line-height: 1;
+      opacity: 0.5;
+      
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    
+    h4 {
+      margin-top: 0;
+      font-size: 18px;
+      color: $active-color;
+      margin-bottom: 14px;
+    }
+    
+    p {
+      font-size: 12px;
+      margin-top: 0;
+    }
+  }
+  
+  &-form {
+    margin-top: 37px;
+    
+    input {
+      display: inline-block;
+      width: 100%;
+      border: 1px solid rgba($dark, 0.15);
+      font-size: 15px;
+      margin-bottom: 10px;
+      padding: 20px;
+      border-radius: 4px;
+    }
+    
+    &_btn {
+      display: block;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 20px;
     }
   }
 }
